--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_nav_bar: ^5.0.6
+  flutter_keyboard_visibility: ^5.0.0
 
 dev_dependencies:
 
